workloads/httpbin/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: httpbin
  labels:
    tenant: httpbin
